2013-02-27  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-shr-100.patch: Updated.

2013-02-19  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-18.patch: Updated.

	* binutils-pr15141-1.patch: Removed.
	* binutils-pr15146-1.patch: Likewise.
	* binutils-pr15149-1.patch: Likewise.
	* README: Updated.

2013-02-15  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr15149-1.patch: New.  Also track weak references.
	* README: Apply it.

2013-02-15  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr15146-1.patch: New.  Don't add DT_NEEDED for
	references from the dummy bfd.
	* README: Apply it.

2013-02-15  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-18.patch: Add bfd_boolean to lang_finish for
	object-only output.

2013-02-15  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr15141-1.patch: New.  Also trace symbol from the IR
	bfd.
	* README: Apply it.

2013-02-15  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-shr-100.patch: Updated.

2013-02-06  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-shr-100.patch: Updated.

2013-02-02  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-18.patch: Updated.

2013-02-02  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-shr-100.patch: Updated.

2013-01-17  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-lto-mixed-18.patch: Updated.

2013-01-17  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-error-15.patch: Updated.

2013-01-14  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-secondary-1.patch: Updated.

2013-01-10  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-error-15.patch: Updated.

2013-01-07  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14897-1.patch: Removed.
	* README: Likewise.

2013-01-07  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14899-1.patch: Removed.
	* README: Likewise.

2013-01-07  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-use-ld-1.patch: Removed.
	* README: Likewise.

2012-12-21  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-shr-100.patch: Updated.

2012-12-21  H.J. Lu  <hjl.tools@gmail.com>

	* binutils-pr14980-1.patch: Removed.