@@ -1,5 +1,14 @@
 bfd/
 
+2013-04-05  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* elf-bfd.h (struct elf_backend_data <merge_symbol>):  Add abfd,
+	newdyn and olddyn.  Remove const from oldsec.
+	(_bfd_elf_sharable_merge_symbol): Updated.
+	* elf64-x86-64.c (elf_x86_64_merge_symbol): Likewise.
+	* elflink.c (_bfd_elf_merge_symbol): Update bed->merge_symbol
+	call.
+
 2009-12-12  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* elf.c: Fix shadowed variable warnings.
@@ -131,10 +140,21 @@ ld/
 	* scripttempl/elf.sc: Support sharable sections.
 
 diff --git a/bfd/elf-bfd.h b/bfd/elf-bfd.h
-index a93e0d4..22517ee 100644
+index 3b4bd6f..aaef078 100644
 --- a/bfd/elf-bfd.h
 +++ b/bfd/elf-bfd.h
-@@ -2150,6 +2150,28 @@ extern bfd_boolean bfd_elf_link_add_symbols
+@@ -1210,8 +1210,9 @@ struct elf_backend_data
+   /* Return TRUE if we can merge 2 definitions.  */
+   bfd_boolean (*merge_symbol) (struct elf_link_hash_entry *,
+ 			       const Elf_Internal_Sym *, asection **,
++			       bfd_boolean, bfd_boolean, bfd *,
+ 			       bfd_boolean, bfd_boolean,
+-			       bfd *, const asection *);
++			       bfd *, asection *);
+ 
+   /* Return TRUE if symbol should be hashed in the `.gnu.hash' section.  */
+   bfd_boolean (*elf_hash_symbol) (struct elf_link_hash_entry *);
+@@ -2146,6 +2147,24 @@ extern bfd_boolean bfd_elf_link_add_symbols
    (bfd *, struct bfd_link_info *);
  extern bfd_boolean _bfd_elf_add_dynamic_entry
    (struct bfd_link_info *, bfd_vma, bfd_vma);
@@ -153,21 +173,17 @@ index a93e0d4..22517ee 100644
 +extern asection *_bfd_elf_sharable_common_section
 +  (asection *);
 +extern bfd_boolean _bfd_elf_sharable_merge_symbol
-+  (struct bfd_link_info *, struct elf_link_hash_entry **,
-+   struct elf_link_hash_entry *, Elf_Internal_Sym *, asection **,
-+   bfd_vma *, unsigned int *, bfd_boolean *, bfd_boolean *,
-+   bfd_boolean *, bfd_boolean *, bfd_boolean *, bfd_boolean *,
-+   bfd_boolean *, bfd_boolean *, bfd *, asection **,
-+   bfd_boolean *, bfd_boolean *, bfd_boolean *, bfd_boolean *,
-+   bfd *, asection **);
++  (struct elf_link_hash_entry *, const Elf_Internal_Sym *,
++   asection **, bfd_boolean, bfd_boolean, bfd *,
++   bfd_boolean, bfd_boolean, bfd *, asection *);
  
  extern bfd_boolean bfd_elf_link_record_dynamic_symbol
    (struct bfd_link_info *, struct elf_link_hash_entry *);
 diff --git a/bfd/elf.c b/bfd/elf.c
-index 380f6ef..8c93cb3 100644
+index bf05ae0..da587fe 100644
 --- a/bfd/elf.c
 +++ b/bfd/elf.c
-@@ -2095,6 +2095,8 @@ static const struct bfd_elf_special_section special_sections_g[] =
+@@ -2102,6 +2102,8 @@ static const struct bfd_elf_special_section special_sections_g[] =
    { STRING_COMMA_LEN (".gnu.liblist"),     0, SHT_GNU_LIBLIST, SHF_ALLOC },
    { STRING_COMMA_LEN (".gnu.conflict"),    0, SHT_RELA,        SHF_ALLOC },
    { STRING_COMMA_LEN (".gnu.hash"),        0, SHT_GNU_HASH,    SHF_ALLOC },
@@ -176,7 +192,7 @@ index 380f6ef..8c93cb3 100644
    { NULL,                        0,        0, 0,               0 }
  };
  
-@@ -2149,6 +2151,8 @@ static const struct bfd_elf_special_section special_sections_s[] =
+@@ -2156,6 +2158,8 @@ static const struct bfd_elf_special_section special_sections_s[] =
    /* See struct bfd_elf_special_section declaration for the semantics of
       this special case where .prefix_length != strlen (.prefix).  */
    { ".stabstr",			5,  3, SHT_STRTAB, 0 },
@@ -185,7 +201,7 @@ index 380f6ef..8c93cb3 100644
    { NULL,                       0,  0, 0,          0 }
  };
  
-@@ -3609,6 +3613,32 @@ get_program_header_size (bfd *abfd, struct bfd_link_info *info)
+@@ -3615,6 +3619,32 @@ get_program_header_size (bfd *abfd, struct bfd_link_info *info)
  	}
      }
  
@@ -218,7 +234,7 @@ index 380f6ef..8c93cb3 100644
    /* Let the backend count up any program headers it might need.  */
    bed = get_elf_backend_data (abfd);
    if (bed->elf_backend_additional_program_headers)
-@@ -3780,6 +3810,8 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -3785,6 +3815,8 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
        bfd_boolean phdr_in_segment = TRUE;
        bfd_boolean writable;
        int tls_count = 0;
@@ -227,7 +243,7 @@ index 380f6ef..8c93cb3 100644
        asection *first_tls = NULL;
        asection *dynsec, *eh_frame_hdr;
        bfd_size_type amt;
-@@ -4088,6 +4120,22 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -4093,6 +4125,22 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
  		first_tls = s;
  	      tls_count++;
  	    }
@@ -250,7 +266,7 @@ index 380f6ef..8c93cb3 100644
  	}
  
        /* If there are any SHF_TLS output sections, add PT_TLS segment.  */
-@@ -4115,6 +4163,60 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
+@@ -4120,6 +4168,60 @@ _bfd_elf_map_sections_to_segments (bfd *abfd, struct bfd_link_info *info)
  	  pm = &m->next;
  	}
  
@@ -310,8 +326,8 @@ index 380f6ef..8c93cb3 100644
 +
        /* If there is a .eh_frame_hdr section, throw in a PT_GNU_EH_FRAME
  	 segment.  */
-       eh_frame_hdr = elf_tdata (abfd)->eh_frame_hdr;
-@@ -4656,6 +4758,7 @@ assign_file_positions_for_load_sections (bfd *abfd,
+       eh_frame_hdr = elf_eh_frame_hdr (abfd);
+@@ -4661,6 +4763,7 @@ assign_file_positions_for_load_sections (bfd *abfd,
  	  align = (bfd_size_type) 1 << bfd_get_section_alignment (abfd, sec);
  
  	  if ((p->p_type == PT_LOAD
@@ -320,7 +336,7 @@ index 380f6ef..8c93cb3 100644
  	      && (this_hdr->sh_type != SHT_NOBITS
  		  || ((this_hdr->sh_flags & SHF_ALLOC) != 0
 diff --git a/bfd/elf32-i386.c b/bfd/elf32-i386.c
-index 16dd28e..9b64290 100644
+index 2609130..aa07bae 100644
 --- a/bfd/elf32-i386.c
 +++ b/bfd/elf32-i386.c
 @@ -819,6 +819,9 @@ struct elf_i386_link_hash_table
@@ -355,7 +371,7 @@ index 16dd28e..9b64290 100644
      abort ();
  
    if (get_elf_i386_backend_data (dynobj)->is_vxworks
-@@ -2153,17 +2165,23 @@ elf_i386_adjust_dynamic_symbol (struct bfd_link_info *info,
+@@ -2154,17 +2166,23 @@ elf_i386_adjust_dynamic_symbol (struct bfd_link_info *info,
       both the dynamic object and the regular object will refer to the
       same memory location for the variable.  */
  
@@ -382,7 +398,7 @@ index 16dd28e..9b64290 100644
    return _bfd_elf_adjust_dynamic_copy (h, s);
  }
  
-@@ -2884,6 +2902,7 @@ elf_i386_size_dynamic_sections (bfd *output_bfd, struct bfd_link_info *info)
+@@ -2885,6 +2903,7 @@ elf_i386_size_dynamic_sections (bfd *output_bfd, struct bfd_link_info *info)
  	       || s == htab->elf.iplt
  	       || s == htab->elf.igotplt
  	       || s == htab->plt_eh_frame
@@ -390,7 +406,7 @@ index 16dd28e..9b64290 100644
  	       || s == htab->sdynbss)
  	{
  	  /* Strip these too.  */
-@@ -4680,20 +4699,26 @@ do_glob_dat:
+@@ -4681,20 +4700,26 @@ do_glob_dat:
    if (h->needs_copy)
      {
        Elf_Internal_Rela rel;
@@ -419,7 +435,7 @@ index 16dd28e..9b64290 100644
      }
  
    return TRUE;
-@@ -5012,7 +5037,8 @@ elf_i386_add_symbol_hook (bfd * abfd,
+@@ -5015,7 +5040,8 @@ elf_i386_add_symbol_hook (bfd * abfd,
  	  || ELF_ST_BIND (sym->st_info) == STB_GNU_UNIQUE))
      elf_tdata (info->output_bfd)->has_gnu_symbols = TRUE;
  
@@ -429,7 +445,7 @@ index 16dd28e..9b64290 100644
  }
  
  #define TARGET_LITTLE_SYM		bfd_elf32_i386_vec
-@@ -5066,6 +5092,19 @@ elf_i386_add_symbol_hook (bfd * abfd,
+@@ -5069,6 +5095,19 @@ elf_i386_add_symbol_hook (bfd * abfd,
  #undef	elf_backend_post_process_headers
  #define	elf_backend_post_process_headers	_bfd_elf_set_osabi
  
@@ -450,7 +466,7 @@ index 16dd28e..9b64290 100644
  
  /* FreeBSD support.  */
 diff --git a/bfd/elf64-x86-64.c b/bfd/elf64-x86-64.c
-index 045b281..0b27594 100644
+index 9adc959..43a344c 100644
 --- a/bfd/elf64-x86-64.c
 +++ b/bfd/elf64-x86-64.c
 @@ -769,6 +769,9 @@ struct elf_x86_64_link_hash_table
@@ -485,7 +501,7 @@ index 045b281..0b27594 100644
      abort ();
  
    if (!info->no_ld_generated_unwind_info
-@@ -2211,6 +2223,8 @@ elf_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
+@@ -2212,6 +2224,8 @@ elf_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
    if (htab == NULL)
      return FALSE;
  
@@ -494,7 +510,7 @@ index 045b281..0b27594 100644
    /* We must generate a R_X86_64_COPY reloc to tell the dynamic linker
       to copy the initial value out of the dynamic object and into the
       runtime process image.  */
-@@ -2218,12 +2232,16 @@ elf_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
+@@ -2219,12 +2233,16 @@ elf_x86_64_adjust_dynamic_symbol (struct bfd_link_info *info,
      {
        const struct elf_backend_data *bed;
        bed = get_elf_backend_data (info->output_bfd);
@@ -514,7 +530,7 @@ index 045b281..0b27594 100644
    return _bfd_elf_adjust_dynamic_copy (h, s);
  }
  
-@@ -2922,6 +2940,7 @@ elf_x86_64_size_dynamic_sections (bfd *output_bfd,
+@@ -2923,6 +2941,7 @@ elf_x86_64_size_dynamic_sections (bfd *output_bfd,
  	  || s == htab->elf.iplt
  	  || s == htab->elf.igotplt
  	  || s == htab->plt_eh_frame
@@ -522,7 +538,7 @@ index 045b281..0b27594 100644
  	  || s == htab->sdynbss)
  	{
  	  /* Strip this section if we don't need it; see the
-@@ -4627,13 +4646,19 @@ do_glob_dat:
+@@ -4628,13 +4647,19 @@ do_glob_dat:
    if (h->needs_copy)
      {
        Elf_Internal_Rela rela;
@@ -543,7 +559,7 @@ index 045b281..0b27594 100644
  	abort ();
  
        rela.r_offset = (h->root.u.def.value
-@@ -4641,7 +4666,7 @@ do_glob_dat:
+@@ -4642,7 +4667,7 @@ do_glob_dat:
  		       + h->root.u.def.section->output_offset);
        rela.r_info = htab->r_info (h->dynindx, R_X86_64_COPY);
        rela.r_addend = 0;
@@ -552,7 +568,7 @@ index 045b281..0b27594 100644
      }
  
    return TRUE;
-@@ -4974,7 +4999,8 @@ elf_x86_64_add_symbol_hook (bfd *abfd,
+@@ -4977,7 +5002,8 @@ elf_x86_64_add_symbol_hook (bfd *abfd,
  	  || ELF_ST_BIND (sym->st_info) == STB_GNU_UNIQUE))
      elf_tdata (info->output_bfd)->has_gnu_symbols = TRUE;
  
@@ -562,7 +578,7 @@ index 045b281..0b27594 100644
  }
  
  
-@@ -4990,7 +5016,8 @@ elf_x86_64_elf_section_from_bfd_section (bfd *abfd ATTRIBUTE_UNUSED,
+@@ -4993,7 +5019,8 @@ elf_x86_64_elf_section_from_bfd_section (bfd *abfd ATTRIBUTE_UNUSED,
        *index_return = SHN_X86_64_LCOMMON;
        return TRUE;
      }
@@ -572,7 +588,7 @@ index 045b281..0b27594 100644
  }
  
  /* Process a symbol.  */
-@@ -5008,22 +5035,26 @@ elf_x86_64_symbol_processing (bfd *abfd ATTRIBUTE_UNUSED,
+@@ -5011,22 +5038,26 @@ elf_x86_64_symbol_processing (bfd *abfd ATTRIBUTE_UNUSED,
        asym->value = elfsym->internal_elf_sym.st_size;
        /* Common symbol doesn't set BSF_GLOBAL.  */
        asym->flags &= ~BSF_GLOBAL;
@@ -601,7 +617,7 @@ index 045b281..0b27594 100644
    else
      return SHN_X86_64_LCOMMON;
  }
-@@ -5032,7 +5063,7 @@ static asection *
+@@ -5035,7 +5066,7 @@ static asection *
  elf_x86_64_common_section (asection *sec)
  {
    if ((elf_section_flags (sec) & SHF_X86_64_LARGE) == 0)
@@ -610,47 +626,54 @@ index 045b281..0b27594 100644
    else
      return &_bfd_elf_large_com_section;
  }
-@@ -5069,7 +5100,8 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
+@@ -5045,9 +5076,12 @@ elf_x86_64_merge_symbol (struct elf_link_hash_entry *h,
+ 			 const Elf_Internal_Sym *sym,
+ 			 asection **psec,
+ 			 bfd_boolean newdef,
++			 bfd_boolean newdyn,
++			 bfd *abfd,
+ 			 bfd_boolean olddef,
++			 bfd_boolean olddyn,
+ 			 bfd *oldbfd,
+-			 const asection *oldsec)
++			 asection *oldsec)
+ {
+   /* A normal common symbol and a large common symbol result in a
+      normal common symbol.  We turn the large common symbol into a
+@@ -5056,7 +5090,8 @@ elf_x86_64_merge_symbol (struct elf_link_hash_entry *h,
        && h->root.type == bfd_link_hash_common
-       && !*newdef
-       && bfd_is_com_section (*sec)
--      && *oldsec != *sec)
-+      && *oldsec != *sec
-+      && _bfd_elf_sharable_common_section_index (*oldsec) == SHN_COMMON)
+       && !newdef
+       && bfd_is_com_section (*psec)
+-      && oldsec != *psec)
++      && oldsec != *psec
++      && _bfd_elf_sharable_common_section_index (oldsec) == SHN_COMMON)
      {
        if (sym->st_shndx == SHN_COMMON
- 	  && (elf_section_flags (*oldsec) & SHF_X86_64_LARGE) != 0)
-@@ -5077,13 +5109,26 @@ elf_x86_64_merge_symbol (struct bfd_link_info *info ATTRIBUTE_UNUSED,
+ 	  && (elf_section_flags (oldsec) & SHF_X86_64_LARGE) != 0)
+@@ -5064,13 +5099,19 @@ elf_x86_64_merge_symbol (struct elf_link_hash_entry *h,
  	  h->root.u.c.p->section
  	    = bfd_make_section_old_way (oldbfd, "COMMON");
  	  h->root.u.c.p->section->flags = SEC_ALLOC;
 +	  return TRUE;
  	}
        else if (sym->st_shndx == SHN_X86_64_LCOMMON
- 	       && (elf_section_flags (*oldsec) & SHF_X86_64_LARGE) == 0)
--	*psec = *sec = bfd_com_section_ptr;
+ 	       && (elf_section_flags (oldsec) & SHF_X86_64_LARGE) == 0)
+-	*psec = bfd_com_section_ptr;
 +	{
-+	  *psec = *sec = bfd_com_section_ptr; 
++	  *psec = bfd_com_section_ptr;
 +	  return TRUE;
 +	}
      }
  
 -  return TRUE;
-+  return _bfd_elf_sharable_merge_symbol (info, sym_hash, h, sym,
-+					 psec, pvalue, pold_alignment,
-+					 skip, override,
-+					 type_change_ok, size_change_ok,
-+					 newdyn, newdef,
-+					 newdyncommon, newweak,
-+					 abfd, sec,
-+					 olddyn, olddef,
-+					 olddyncommon, oldweak,
-+					 oldbfd, oldsec);
++  return _bfd_elf_sharable_merge_symbol (h, sym, psec, newdef, newdyn,
++					 abfd, olddef, olddyn, oldbfd,
++					 oldsec);
  }
  
  static int
 diff --git a/bfd/elflink.c b/bfd/elflink.c
-index d423ca4..369f0ca 100644
+index 99a1ddf..5a2b21f 100644
 --- a/bfd/elflink.c
 +++ b/bfd/elflink.c
 @@ -386,6 +386,27 @@ _bfd_elf_create_dynamic_sections (bfd *abfd, struct bfd_link_info *info)
@@ -681,7 +704,17 @@ index d423ca4..369f0ca 100644
  	}
      }
  
-@@ -13066,3 +13087,219 @@ elf_append_rel (bfd *abfd, asection *s, Elf_Internal_Rela *rel)
+@@ -1348,7 +1369,8 @@ _bfd_elf_merge_symbol (bfd *abfd,
+      backend to check if we can merge them.  */
+   if (bed->merge_symbol != NULL)
+     {
+-      if (!bed->merge_symbol (h, sym, psec, newdef, olddef, oldbfd, oldsec))
++      if (!bed->merge_symbol (h, sym, psec, newdef, newdyn, abfd,
++			      olddef, olddyn, oldbfd, oldsec))
+ 	return FALSE;
+       sec = *psec;
+     }
+@@ -13008,3 +13030,207 @@ elf_append_rel (bfd *abfd, asection *s, Elf_Internal_Rela *rel)
    BFD_ASSERT (loc + bed->s->sizeof_rel <= s->contents + s->size);
    bed->s->swap_reloc_out (abfd, rel, loc);
  }
@@ -788,40 +821,28 @@ index d423ca4..369f0ca 100644
 +}
 +
 +bfd_boolean
-+_bfd_elf_sharable_merge_symbol
-+  (struct bfd_link_info *info ATTRIBUTE_UNUSED,
-+   struct elf_link_hash_entry **sym_hash ATTRIBUTE_UNUSED,
-+   struct elf_link_hash_entry *h,
-+   Elf_Internal_Sym *sym ATTRIBUTE_UNUSED,
-+   asection **psec,
-+   bfd_vma *pvalue ATTRIBUTE_UNUSED,
-+   unsigned int *pold_alignment ATTRIBUTE_UNUSED,
-+   bfd_boolean *skip ATTRIBUTE_UNUSED,
-+   bfd_boolean *override ATTRIBUTE_UNUSED,
-+   bfd_boolean *type_change_ok ATTRIBUTE_UNUSED,
-+   bfd_boolean *size_change_ok ATTRIBUTE_UNUSED,
-+   bfd_boolean *newdef ATTRIBUTE_UNUSED,
-+   bfd_boolean *newdyn,
-+   bfd_boolean *newdyncommon ATTRIBUTE_UNUSED,
-+   bfd_boolean *newweak ATTRIBUTE_UNUSED,
-+   bfd *abfd,
-+   asection **sec,
-+   bfd_boolean *olddef ATTRIBUTE_UNUSED,
-+   bfd_boolean *olddyn,
-+   bfd_boolean *olddyncommon ATTRIBUTE_UNUSED,
-+   bfd_boolean *oldweak ATTRIBUTE_UNUSED,
-+   bfd *oldbfd,
-+   asection **oldsec)
++_bfd_elf_sharable_merge_symbol (struct elf_link_hash_entry *h,
++				const Elf_Internal_Sym *sym,
++				asection **psec,
++				bfd_boolean newdef,
++				bfd_boolean newdyn,
++				bfd *abfd,
++				bfd_boolean olddef,
++				bfd_boolean olddyn,
++				bfd *oldbfd,
++				asection *oldsec)
 +{
++  asection *sec = *psec;
++
 +  /* Check sharable symbol.  If one is undefined, it is OK.  */
-+  if (*oldsec && !bfd_is_und_section (*sec))
++  if (oldsec && !bfd_is_und_section (sec))
 +    {
 +      bfd_boolean sharable, oldsharable;
 +     
-+      sharable = (elf_section_data (*sec)
-+		  && (elf_section_flags (*sec) & SHF_GNU_SHARABLE));
-+      oldsharable = (elf_section_data (*oldsec)
-+		     && (elf_section_flags (*oldsec)
++      sharable = (elf_section_data (sec)
++		  && (elf_section_flags (sec) & SHF_GNU_SHARABLE));
++      oldsharable = (elf_section_data (oldsec)
++		     && (elf_section_flags (oldsec)
 +			 & SHF_GNU_SHARABLE));
 +
 +      if (sharable != oldsharable)
@@ -834,23 +855,23 @@ index d423ca4..369f0ca 100644
 +	    {
 +	      sbfd = oldbfd;
 +	      nsbfd = abfd;
-+	      ssec = *oldsec;
-+	      nssec = *sec;
-+	      sdyn = *olddyn;
-+	      nsdyn = *newdyn;
-+	      sdef = *olddef;
-+	      nsdef = *newdef;
++	      ssec = oldsec;
++	      nssec = sec;
++	      sdyn = olddyn;
++	      nsdyn = newdyn;
++	      sdef = olddef;
++	      nsdef = newdef;
 +	    }
 +	  else
 +	    {
 +	      sbfd = abfd;
 +	      nsbfd = oldbfd;
-+	      ssec = *sec;
-+	      nssec = *oldsec;
-+	      sdyn = *newdyn;
-+	      nsdyn = *olddyn;
-+	      sdef = *newdef;
-+	      nsdef = *olddef;
++	      ssec = sec;
++	      nssec = oldsec;
++	      sdyn = newdyn;
++	      nsdyn = olddyn;
++	      sdef = newdef;
++	      nsdef = olddef;
 +	    }
 +
 +	  if (sdef && !sdyn)
@@ -885,7 +906,7 @@ index d423ca4..369f0ca 100644
 +		  scomm = get_sharable_common_section (abfd);
 +		  if (scomm == NULL)
 +		    return FALSE;
-+		  *psec = *sec = scomm;
++		  *psec = scomm;
 +		}
 +
 +	      return TRUE;
@@ -902,7 +923,7 @@ index d423ca4..369f0ca 100644
 +  return TRUE;
 +}
 diff --git a/bfd/elfnn-ia64.c b/bfd/elfnn-ia64.c
-index 864feba..03bc90c 100644
+index 05c2f1b..e3b1b0f 100644
 --- a/bfd/elfnn-ia64.c
 +++ b/bfd/elfnn-ia64.c
 @@ -1056,7 +1056,8 @@ elfNN_ia64_add_symbol_hook (bfd *abfd,
@@ -915,7 +936,7 @@ index 864feba..03bc90c 100644
  }
  
  /* Return the number of additional phdrs we will need.  */
-@@ -5063,6 +5064,19 @@ elfNN_hpux_backend_symbol_processing (bfd *abfd ATTRIBUTE_UNUSED,
+@@ -5068,6 +5069,19 @@ elfNN_hpux_backend_symbol_processing (bfd *abfd ATTRIBUTE_UNUSED,
  #define elf_backend_special_sections	elfNN_ia64_special_sections
  #define elf_backend_default_execstack	0
  
@@ -936,10 +957,10 @@ index 864feba..03bc90c 100644
     SHF_LINK_ORDER. But it doesn't set the sh_link or sh_info fields.
     We don't want to flood users with so many error messages. We turn
 diff --git a/binutils/readelf.c b/binutils/readelf.c
-index c7bd05f..8d224a8 100644
+index b7607a0..35fd940 100644
 --- a/binutils/readelf.c
 +++ b/binutils/readelf.c
-@@ -1385,6 +1385,8 @@ dump_relocations (FILE * file,
+@@ -1391,6 +1391,8 @@ dump_relocations (FILE * file,
  			sec_name = "ABS";
  		      else if (psym->st_shndx == SHN_COMMON)
  			sec_name = "COMMON";
@@ -948,7 +969,7 @@ index c7bd05f..8d224a8 100644
  		      else if ((elf_header.e_machine == EM_MIPS
  				&& psym->st_shndx == SHN_MIPS_SCOMMON)
  			       || (elf_header.e_machine == EM_TI_C6000
-@@ -2967,6 +2969,7 @@ get_segment_type (unsigned long p_type)
+@@ -2973,6 +2975,7 @@ get_segment_type (unsigned long p_type)
      case PT_SHLIB:	return "SHLIB";
      case PT_PHDR:	return "PHDR";
      case PT_TLS:	return "TLS";
@@ -956,7 +977,7 @@ index c7bd05f..8d224a8 100644
  
      case PT_GNU_EH_FRAME:
  			return "GNU_EH_FRAME";
-@@ -9154,6 +9157,8 @@ get_symbol_index_type (unsigned int type)
+@@ -9163,6 +9166,8 @@ get_symbol_index_type (unsigned int type)
      case SHN_UNDEF:	return "UND";
      case SHN_ABS:	return "ABS";
      case SHN_COMMON:	return "COM";
@@ -1045,7 +1066,7 @@ index 3377261..286df1f 100644
  	      && ssect->type != SHT_FINI_ARRAY
  	      && ssect->type != SHT_PREINIT_ARRAY)
 diff --git a/include/bfdlink.h b/include/bfdlink.h
-index bf44dee..b8a3742 100644
+index 1ac0738..8f6f2dc 100644
 --- a/include/bfdlink.h
 +++ b/include/bfdlink.h
 @@ -387,6 +387,9 @@ struct bfd_link_info
@@ -1059,10 +1080,10 @@ index bf44dee..b8a3742 100644
       flags.  */
    unsigned int execstack: 1;
 diff --git a/include/elf/common.h b/include/elf/common.h
-index 2bae603..235c92a 100644
+index 8bdefa6..6dd46c2 100644
 --- a/include/elf/common.h
 +++ b/include/elf/common.h
-@@ -435,6 +435,7 @@
+@@ -432,6 +432,7 @@
  #define PT_SUNW_EH_FRAME PT_GNU_EH_FRAME      /* Solaris uses the same value */
  #define PT_GNU_STACK	(PT_LOOS + 0x474e551) /* Stack flags */
  #define PT_GNU_RELRO	(PT_LOOS + 0x474e552) /* Read-only after relocation */
@@ -1070,7 +1091,7 @@ index 2bae603..235c92a 100644
  
  /* Program segment permissions, in program header p_flags field.  */
  
-@@ -517,6 +518,8 @@
+@@ -514,6 +515,8 @@
  					   are not to be further
  					   relocated.  */
  
@@ -1079,7 +1100,7 @@ index 2bae603..235c92a 100644
  /* Values of note segment descriptor types for core files.  */
  
  #define NT_PRSTATUS	1		/* Contains copy of prstatus struct */
-@@ -684,6 +687,9 @@
+@@ -683,6 +686,9 @@
  #define STT_LOPROC	13		/* Processor-specific semantics */
  #define STT_HIPROC	15		/* Processor-specific semantics */
  
@@ -1135,7 +1156,7 @@ index 4842257..e9cd479 100644
  if [ "x${host}" = "x${target}" ]; then
    case " $EMULATION_LIBPATH " in
 diff --git a/ld/emultempl/elf32.em b/ld/emultempl/elf32.em
-index e2f2a1a..cf84986 100644
+index ea7bad0..c37b26f 100644
 --- a/ld/emultempl/elf32.em
 +++ b/ld/emultempl/elf32.em
 @@ -105,6 +105,7 @@ gld${EMULATION_NAME}_before_parse (void)
@@ -1146,7 +1167,7 @@ index e2f2a1a..cf84986 100644
  }
  
  EOF
-@@ -1818,6 +1819,12 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
+@@ -1806,6 +1807,12 @@ gld${EMULATION_NAME}_place_orphan (asection *s,
    int iself = s->owner->xvec->flavour == bfd_target_elf_flavour;
    unsigned int sh_type = iself ? elf_section_type (s) : SHT_NULL;
  
@@ -1172,10 +1193,10 @@ index c23c554..b41c015 100644
    ldfile_add_arch ("");
    emulation = get_emulation (argc, argv);
 diff --git a/ld/scripttempl/elf.sc b/ld/scripttempl/elf.sc
-index bbff233..e495a0f 100644
+index 9491995..44df652 100644
 --- a/ld/scripttempl/elf.sc
 +++ b/ld/scripttempl/elf.sc
-@@ -298,6 +298,40 @@ STACK="  .stack        ${RELOCATING-0}${RELOCATING+${STACK_ADDR}} :
+@@ -296,6 +296,40 @@ STACK="  .stack        ${RELOCATING-0}${RELOCATING+${STACK_ADDR}} :
      ${RELOCATING+${USER_LABEL_PREFIX}_stack = .;}
      *(.stack)
    }"
@@ -1216,7 +1237,7 @@ index bbff233..e495a0f 100644
  
  TEXT_START_ADDR="SEGMENT_START(\"text-segment\", ${TEXT_START_ADDR})"
  SHLIB_TEXT_START_ADDR="SEGMENT_START(\"text-segment\", ${SHLIB_TEXT_START_ADDR:-0})"
-@@ -392,6 +426,7 @@ eval $COMBRELOCCAT <<EOF
+@@ -390,6 +424,7 @@ eval $COMBRELOCCAT <<EOF
    .rel.got      ${RELOCATING-0} : { *(.rel.got) }
    .rela.got     ${RELOCATING-0} : { *(.rela.got) }
    ${OTHER_GOT_RELOC_SECTIONS}
