@@ -1,3 +1,7 @@
+2013-04-05  H.J. Lu  <hjl.tools@gmail.com>
+
+	* binutils-shr-100.patch: Updated.
+
 2013-02-27  H.J. Lu  <hjl.tools@gmail.com>
 
 	* binutils-shr-100.patch: Updated.
